# gRainbow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  audioPluginHostGraph.filtergraph  gRainbow.fig  gRainbow.jucer
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Source/: ArcSpectrogram.cpp  ArcSpectrogram.h  AudioRecorder.cpp  AudioRecorder.h  EnvelopeADSR.cpp  EnvelopeADSR.h  EnvelopeGrain.cpp  EnvelopeGrain.h  Fft.cpp  Fft.h  FilterControl.cpp  FilterControl.h  GeneratorBox.cpp  GeneratorBox.h  GeneratorTabs.cpp  GeneratorTabs.h  GeneratorsBox.cpp  GeneratorsBox.h  GlobalParamBox.cpp  GlobalParamBox.h  Grain.cpp  Grain.h  GrainPositionFinder.cpp  GrainPositionFinder.h  GranularMapperDevice.h  GranularSynth.cpp  GranularSynth.h  Main.cpp  MainComponent.cpp  MainComponent.h  Modulators.cpp  Modulators.h  NoteGrid.cpp  NoteGrid.h  Parameters.cpp  Parameters.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  (+29 more)
Source/Components/: AdjustPanel.cpp  AdjustPanel.h  ArcSpectrogram.cpp  ArcSpectrogram.h  Buttons.h  EnvelopeADSR.cpp  EnvelopeADSR.h  EnvelopeGrain.cpp  EnvelopeGrain.h  FilterControl.cpp  FilterControl.h  FxPanel.cpp  FxPanel.h  GeneratorsBox.cpp  GeneratorsBox.h  GlobalParamBox.cpp  GlobalParamBox.h  GrainControl.cpp  GrainControl.h  MasterControl.cpp  MasterControl.h  MasterPanel.cpp  MasterPanel.h  MeterLookAndFeel.h  NoteGrid.cpp  NoteGrid.h  PositionChanger.cpp  PositionChanger.h  RainbowKeyboard.cpp  RainbowKeyboard.h  RainbowLookAndFeel.cpp  RainbowLookAndFeel.h  RainbowSlider.cpp  RainbowSlider.h  Settings.cpp  Settings.h  Sliders.cpp  Sliders.h  TitlePresetPanel.cpp  TitlePresetPanel.h  (+2 more)
Source/Components/Modulators/: EnvPanel.cpp  EnvPanel.h  Envelopes.cpp  Envelopes.h  KeyboardMod.cpp  KeyboardMod.h  LFOPanel.cpp  LFOPanel.h  LFOs.cpp  LFOs.h
Source/Components/Piano/: PianoPanel.cpp  PianoPanel.h  RainbowKeyboard.cpp  RainbowKeyboard.h  WaveformPanel.cpp  WaveformPanel.h
Source/DSP/: AudioRecorder.cpp  AudioRecorder.h  Fft.cpp  Fft.h  Grain.cpp  Grain.h  GranularSynth.cpp  GranularSynth.h  HPCP.cpp  HPCP.h  PitchDetector.cpp  PitchDetector.h  TransientDetector.cpp  TransientDetector.h
Source/DSP/PitchDetection/: BasicPitch.h  BasicPitchCNN.h  Features.h  Notes.cpp  Notes.h  SymbolicPitchDetector.cpp  SymbolicPitchDetector.h
Source/Resources/: features_model.ort
Source/Utils/: BPF.h  Colour.h  DSP.h  Envelope.h  Files.h  MidiNote.h  PitchClass.h  Presets.h  Timer.h  Utils.h
docs/: build_tips.md  gRainbow-redesign.jam
packaging/: dmg.json  gBow.icns  installer.iss
presets/: billie.gbow  chromatic saw.gbow  init.gbow
tools/: gbowInfo.py
